updates on font bug on iOS

--- a/index.css
+++ b/index.css
@@ -2,7 +2,7 @@
 * {
     padding: 0;
     margin: 0;
-    font-family: "Roboto";
+    font-family: 'Roboto Sans', sans-serif;
 }
 
 ::placeholder {
